--- a/css/style.css
+++ b/css/style.css
@@ -298,7 +298,7 @@
   grid-template-columns: 55fr 45fr;
   align-items: center;
 }
-.testimonials-container{
+.testimonials-container {
   padding: 9.6rem;
 }
 .testimonials {
@@ -306,9 +306,7 @@
   grid-template-columns: 1fr 1fr;
   row-gap: 4.8rem;
   column-gap: 8rem;
-
 }
-
 
 .testimonial-img {
   width: 6.4rem;
@@ -327,21 +325,128 @@
   color: #6f6f6f;
 }
 
-.gallery{
+.gallery {
   display: grid;
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(3, 1fr);
   padding: 1.6rem;
   gap: 1.6rem;
 }
-.gallery-items img{
+.gallery-items img {
   display: block;
   width: 100%;
   transition: all 0.4s;
 }
-.gallery-items img:hover{
+.gallery-items img:hover {
   transform: scale(1.1);
 }
-.gallery-items{
+.gallery-items {
   overflow: hidden;
-  
+}
+
+/* ***************************** */
+/* PRICING */
+/* ***************************** */
+
+.section-pricing {
+  padding: 9.6rem 0;
+}
+
+.pricing-plan {
+  border-radius: 11px;
+  width: 75%;
+}
+
+.plan-header {
+  text-align: center;
+  margin-bottom: 4.8rem;
+}
+.plan-name {
+  text-transform: uppercase;
+  color: #cf711f;
+  font-weight: 600;
+  letter-spacing: 0.75;
+  font-size: 2rem;
+  margin-bottom: 3.2rem;
+}
+
+.pricing-plan--starter {
+  padding: 4.8rem;
+  justify-self: end;
+  border: 2px solid #fdf2e9;
+}
+
+.pricing-plan--complete {
+  position: relative;
+  padding: 4.8rem;
+  background-color: #fdf2e9;
+  overflow: hidden;
+}
+
+.pricing-plan--complete::after {
+  content: "Best Value";
+  position: absolute;
+  top: 6%;
+  right: -18%;
+
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  background-color: #ffd43b;
+
+  color: #333;
+  font-weight: 700;
+  padding: 0.8rem 8rem;
+  transform: rotate(45deg);
+}
+.plan-price {
+  margin-bottom: 1.6rem;
+  font-weight: 600;
+  font-size: 6.2rem;
+  color: #333;
+}
+.plan-text {
+  color: #6f6f6f;
+  font-size: 1.6rem;
+  line-height: 1.6;
+}
+
+.plan-price span {
+  font-size: 3rem;
+  font-weight: 500;
+  margin-right: 0.8rem;
+}
+
+.plan-sign-up {
+  text-align: center;
+  margin-top: 4.8rem;
+}
+
+.plan-details {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  text-align: center;
+}
+/* ***************** */
+/* FEATURES */
+/* ***************** */
+
+.feature-icon {
+  color: #e67e22;
+  height: 3.2rem;
+  width: 3.2rem;
+  background-color: #fdf2e9;
+  margin-bottom: 3.2rem;
+  padding: 1.6rem;
+  border-radius: 50%;
+}
+
+.feature-title {
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 700;
+  margin-bottom: 1.6rem;
+}
+
+.feature-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
 }
