--- a/css/general.css
+++ b/css/general.css
@@ -79,12 +79,13 @@ body {
   padding: 0 3.2rem;
 }
 
+.logo{
+  height: 2.2rem;
+}
 .grid {
   display: grid;
   column-gap: 6.4rem;
   row-gap: 9.6rem;
-
-  
 }
 
 .grid--2-cols {
@@ -96,6 +97,9 @@ body {
 }
 .grid--4-cols {
   grid-template-columns: repeat(4, 1fr);
+}
+.grid--5-cols {
+  grid-template-columns: repeat(5, 1fr);
 }
 
 .grid:not(:last-child){
