--- a/css/style.css
+++ b/css/style.css
@@ -48,9 +48,7 @@
   height: 9.6rem;
   padding: 0 4.8rem;
 }
-.logo {
-  height: 2.2rem;
-}
+
 /* ***************************** */
 /* HERO SECTION */
 /* ***************************** */
@@ -455,7 +453,7 @@
 /* CTA SECTION */
 /* ***************** */
 .section-cta{
-  padding: 4.8rem 0;
+  padding: 4.8rem 0 12.8rem;
 }
 .cta{
     display: grid;
@@ -526,4 +524,76 @@
 .cta *:focus{
   outline: none;
   box-shadow: 0 0 0 0.8rem rgba(253, 243, 233, 0.5);
+}
+
+/* ***************** */
+/* FOOTER SECTION */
+/* ***************** */
+.footer{
+  padding: 12.8rem 0;
+  border-top: 1px solid #eee;
+}
+
+.logo-col {
+  display: flex;
+  flex-direction: column;
+}
+
+.grid--footer{
+  grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
+}
+.footer-heading {
+  font-size: 1.8rem;
+  font-weight: 500;
+  margin-bottom: 4rem;
+}
+
+.contacts{
+  font-style: normal;
+  font-size: 1.6rem;
+  line-height: 1.6;
+}
+.footer-logo{
+  display: block;
+  margin-bottom: 3.2rem;
+}
+.social-links{
+  display: flex;
+  list-style: none;
+  
+  gap: 2.4rem;
+}
+.footer-link:link,
+.footer-link:visited{
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: #767676;
+  transition: all 0.3s;
+}
+.footer-link:hover,
+.footer-link:active{
+  color: #555;
+}
+.social-icon{
+   height: 2.4rem;
+   width: 2.4rem;
+}
+
+.copyright {
+  font-size: 1.4rem;
+  line-height: 1.6;
+  color: #767676;
+  margin-top: auto;
+}
+
+
+.address{
+  margin-bottom: 2.4rem;
+}
+
+.footer-nav{
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
 }
