--- a/css/general.css
+++ b/css/general.css
@@ -61,6 +61,8 @@ Medium: 11px
 }
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -68,6 +70,7 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+  overflow-x: hidden;
 }
 
 /* ***************************** */
