--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,41 @@
   background-color: #cf711f;
 }
 
+.btn-mobile-nav{
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
+}
+
+.icon-mobile-nav{
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"]{
+  display: none;
+}
+
+/* STICKY NAVIGATION */
+.sticky .header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: rgba(255, 255, 255, 0.97);
+  z-index: 999;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+
+.sticky .section-hero {
+  margin-top: 9.6rem;
+}
+
 /* ***************************** */
 /*  HEADER */
 /* ***************************** */
@@ -47,6 +82,7 @@
   /*  Fixing height inorder to make sticky later*/
   height: 9.6rem;
   padding: 0 4.8rem;
+  position: relative;
 }
 
 /* ***************************** */
